<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- debug server -->
    <string name="server_url">http://bankrc.dev.octoberry.ru</string>
    <!-- release server -->
    <!-- <string name="server_url">https://nonamebank.ru</string> -->

    <string name="chat_opponent_id">1647202</string>
    <string name="chat_room_jid">14696_54304748535c12e386013b82@muc.chat.quickblox.com</string>
    <string name="flurry_app_key">Q44C8XNP69PZHTNYZYZR</string>

    <string name="NO_NDS_VALUE">Без НДС</string>
    <string name="NDS_10P">В т.ч. НДС 10%</string>
    <string name="NDS_18P">В т.ч. НДС 18%</string>

    <!-- General -->
    <string name="APP_NAME">No Name Bank</string>
    <string name="SMS_CODE">СМС</string>
    <string name="OK">OK</string>
    <string name="OGRN">ОГРН</string>
    <string name="CHECK_OGRN">Проверить ОГРН</string>
    <string name="ACCOUNT_CREATION">ОТКРЫТИЕ СЧЕТА</string>
    <string name="REQUIRED_DOCUMENTS">НЕОБХОДИМЫЕ ДОКУМЕНТЫ</string>
    <string name="CANCEL_BUTTON">Отмена</string>
    <string name="ACCOUNTS_AND_INVOICES">СЧЕТА И ПЕРЕВОДЫ</string>
    <string name="SIGNIN_TITLE">ВХОД</string>
    <string name="REQS_TITLE">РЕКВИЗИТЫ</string>
    <string name="REGISTRATION_TITLE">РЕГИСТРАЦИЯ</string>
    <string name="SNILS_PLACEHOLDER">СНИЛС</string>
    <string name="SMS_CODE_CONFIRM">Подтверждение СМС</string>
    <string name="SNILS_TITLE">СНИЛС</string>
    <string name="NEXT">Дальше</string>
    <string name="BACK">Назад</string>
    <string name="ADD_TO_CALENDAR">Добавить в календарь</string>
    <string name="REGISTRATION_HINT_MESSAGE">Сообщите нам номер телефона, мы отправим вам СМС-код, чтобы убедиться, что вы человек. Никакого спама, честно.</string>
    <string name="PHONE_NUMBER">Номер телефона</string>
    <string name="APPROVE_PERSONAL_DATA">Нажимая на кнопку «Открыть счёт», вы даете согласие на обработку персональных данных в соответствии с Законом РФ 152-ФЗ</string>
    <string name="MEETING_POINT_TITLE">МЕСТО ВСТРЕЧИ</string>
    <string name="ERROR_GEODECODING">Не удалось получить координаты встречи.</string>
    <string name="ERROR_DOWNLOADING_FILE">Не удалось загрузить файл.</string>
    <string name="ERROR_SETUP_EMAIL">Необходимо настроить почтовый аккаунт.</string>
    <string name="EMAIL_REQS_SUBJECT">Реквизиты</string>
    <string name="EMAIL_REQS_BODY">Мои реквизиты</string>
    <string name="EMAIL_PDF_FILENAME">Реквизиты.pdf</string>
    <string name="EMAIL">E-Mail</string>
    <string name="PASSPORT_UPLOAD_PHOTO">Разворот с фото</string>
    <string name="PASSPORT_UPLOAD_ADDRESS">Разворот с пропиской</string>
    <string name="PHOTO_GALLERY">Галерея</string>
    <string name="PHOTO_TAKE_NEW">Сделать фото</string>
    <string name="ERROR_EVENT_ALREADY_CREATED">Событие уже добавлено в календарь.</string>
    <string name="EVENT_ADDED_TO_CALENDAR">Событие успешно добавлено.</string>
    <string name="ERROR_FAILED_TO_SAVE_EVENT">Не удалось добавить событие в календарь.</string>
    <string name="PASSWORD">Пароль</string>
    <string name="WAIT_NOTICE">Отлично, счет открыт. Втечение 10 минут с тобой свяжется сотрудник банка чтобы договориться о встрече.\n\nПока ты общаешься с нашим сотрудником мы зарезервируем счет.</string>
    <string name="ENTER_OGRN">Введите ОГРН</string>
    <string name="ACCOUNT_CREATED">СЧЕТ ОТКРЫТ</string>
    <string name="MY_ACCOUNTS">Мои счета</string>
    <string name="CREATE_TRANSFER">Создание перевода</string>
    <string name="REPORT">Выписка</string>
    <string name="CHAT">Чат</string>
    <string name="SEND">Отправить</string>
    <string name="MESSAGE">Ваше сообщение</string>
    <string name="ENTER_BANK">ВХОД В БАНК</string>
    <string name="ENTER_NEW_PASSWORD">Введите пароль, который будет использоваться в дальнейшем для входа в банк.</string>
    <string name="ENTER_PASSWORD">Введите пароль для входа в банк.</string>
    <string name="ENTER_CODE">Введите код, который пришел вам в SMS.</string>
    <string name="ENTER_PHONE">Введите номер телефона.</string>
    <string name="RUS">rus</string>
    <string name="MENU_DASHBOARD">Дашборд</string>
    <string name="MENU_DETAILS">Реквизиты</string>
    <string name="MENU_CHAT">Чат с банком</string>
    <string name="ACCOUNT_DETAILS">Реквизиты счета</string>
    <string name="UPLOAD_IN_PROGRESS">Файл отправляется на сервер, повторите попытку позже.</string>
    <string name="MESSAGES">СООБЩЕНИЯ</string>
    <string name="HISTORY_TITLE">ИСТОРИЯ ОПЕРАЦИЙ</string>
    <string name="CREATE_PAYMENT_TITLE">СОЗДАНИЕ ПЛАТЕЖА</string>
    <string name="PAYMENT_SCAN">Загрузить фото счета</string>
    <string name="PAYMENT_MAIL">Отправить в банк в сообщении</string>
    <string name="PAYMENT_MANUAL">Создать вручную</string>
    <string name="PAYMENT_RECEIVER_TITLE">ПОЛУЧАТЕЛЬ</string>
    <string name="RECEIVER">ПОЛУЧАТЕЛЬ</string>
    <string name="ACCOUNT_NUMBER">РАСЧЁТНЫЙ СЧЁТ</string>
    <string name="BIK">БИК</string>
    <string name="INN">ИНН</string>
    <string name="KPP">КПП</string>
    <string name="BANK_NAME">НАИМЕНОВАНИЕ БАНКА</string>
    <string name="CORR_NUMBER">КОРРЕСПОНДЕНТСКИЙ СЧЁТ</string>
    <string name="COPY_PAYMENT_DATA_MESSAGE">Вы можете скопировать и вставить необходимые данные из любого приложения, например, почты, браузера или документа</string>
    <string name="NO_VALID_DATA">ПОДХОДЯЩИХ ДАННЫХ НЕТ</string>
    <string name="PASTE">ВСТАВИТЬ</string>
    <string name="PAYMENT_TARGET_TITLE">НАЗНАЧЕНИЕ</string>
    <string name="PAYMENT_TARGET">Назначение платежа</string>
    <string name="PAYMENT_SUMM_TITLE">СУММА</string>
    <string name="PAYMENT_SUMM">Сумма</string>
    <string name="FROM_ACCOUNT">Со счёта</string>
    <string name="NO_NDS">Без НДС</string>
    <string name="NDS">НДС</string>
    <string name="DUTY_INCLUDED">Налог включён в сумму</string>
    <string name="COMMISSION">КОМИССИЯ ЗА ТРАНЗАКЦИЮ</string>
    <string name="TOTAL">ИТОГО</string>
    <string name="PAYMENT_ACCOUNT_TITLE">СЧЁТ</string>
    <string name="PAYMENT_CONFIRM_TITLE">ПРОВЕРЬТЕ ДАННЫЕ</string>
    <string name="SAVE">СОХРАНИТЬ</string>
    <string name="PAY">ОПЛАТИТЬ</string>
    <string name="CONFIRM_PAYMENT">Подтвердите платёж в пользу</string>
    <string name="PAYMENT_RESULT_IN_PROGRESS">ПОДОЖДИТЕ</string>
    <string name="PAYMENT_RESULT_SUCCESS">ГОТОВО!</string>
    <string name="PAYMENT_RESULT_FAIL">УПС!</string>
    <string name="PAYMENT_SUCCESS">Платёж отправлен</string>
    <string name="PAYMENT_FAIL">Платёж не был проведён</string>
    <string name="PAYMENT_FAIL_MESSAGE">Скорее всего это техническая проблема, и мы сейчас все починим. Попробуйте повторить платёж чуть позже.</string>
    <string name="CANCEL_PAYMENT">Отменить платёж</string>
    <string name="GLADDEN_PARTNER">Обрадовать партнёра</string>
    <string name="OPEN_ACCOUNT">ОТКРЫТЬ СЧЕТ</string>
    <string name="ALREADY_CLIENT">Я УЖЕ КЛИЕНТ</string>
    <string name="PIN_CODE">ПИН</string>
    <string name="ENTER">ВОЙТИ</string>
    <string name="COMPANY">Компания</string>
    <string name="CHECK_COMPANY">Это ваша компания?</string>
    <string name="TRUE">ДА ВСЕ ПРАВИЛЬНО!</string>
    <string name="WE_WILL_CALL_YOU">Наш представитель свяжется с вами по указанному номеру. Счёт будет открыт через несколько минут.</string>
    <string name="WAIT_A_CALL">Отлично! Мы скоро свяжемся с вами</string>
    <string name="ACCOUNT_WILL_BE_CREATED">Мы подтвердим ваш номер телефона. Счёт будет открыт через несколько минут.</string>
    <string name="PREPARE_DOCUMENTS">ПОДГОТОВИТЬ ДОКУМЕНТЫ</string>
    <string name="ACCOUNT_READY">Ура! Счёт готов!</string>
    <string name="BEFORE_MEETING">Перед встречей необходимо</string>
    <string name="GENERATE_ACP">Создать ЭЦП</string>
    <string name="UPLOAD_DOCUMENTS">Загрузить паспортные данные учредителей</string>
    <string name="PREPARE_DOCUMENTS_PACKAGE">Подготовить пакет документов</string>
    <string name="ALL_DONE">ВСЁ ГОТОВО</string>
    <string name="FIRST_PAGE">Первая страница</string>
    <string name="SECOND_PAGE">Прописка</string>
    <string name="THINK_UP_PIN">Придумайте PIN для входа в банк</string>
    <string name="REPEAT_PIN">Введите PIN еще раз</string>
    <string name="WE_WILL_ASSIGN_MEETING">Мы обсудим и назначим встречу на удобное время.</string>
    <string name="CREATE_PIN">СОЗДАТЬ ПИН-КОД</string>
    <string name="MEETING_DATA_FORMAT" formatted="false"><![CDATA[Встреча с нашим представителем пройдет <strong>%s</strong> в <strong>%s</strong> по адресу <strong>%s</strong> ]]></string>
    <string name="PULL_DOWN_MESSAGE_1">Потяните вниз, чтобы увидеть реквизиты</string>
    <string name="PULL_DOWN_MESSAGE_2">и поделиться ими с партнерами</string>
    <string name="PULL_UP_MESSAGE">Потяните вверх, чтобы увидеть историю операций</string>
    <string name="FAVOURITE_PARTNERS">Здесь будут видны ваши любимые партнёры</string>
    <string name="LAST_PAYMENT">последний платёж</string>
    <string name="PERIOD_ALL">Все</string>
    <string name="PERIOD_WEEK">Неделя</string>
    <string name="PERIOD_MONTH">Месяц</string>
    <string name="PERIOD_HALF_YEAR">Пол года</string>
    <string name="REPEAT_PAYMENT">ПОВТОРИТЬ</string>
    <string name="SHARE_PAYMENT">ПОДЕЛИТЬСЯ</string>
    <string name="SHARE_PAYMENT_TITLE" formatted="false"><![CDATA[Платежное поручение от %s ]]></string>
    <string name="SHARE_PAYMENT_BODY" formatted="false"><![CDATA[Здравствуйте!\nПрикрепляю платежное поручение от %s\nСтатус платежа: %s ]]></string>
    <string name="SHARE_PAYMENT_REQUEST">Отправить платеж через</string>
    <string name="TITLE_ACTIVITY_PAYMENT_DETAILS">PaymentDetailsActivity</string>
    <string name="RECEIVED">ПОЛУЧЕН</string>
    <string name="PAID">ОПЛАЧЕН</string>
    <string name="FROM">ОТ</string>
    <string name="BANK">БАНК</string>
    <string name="EXIT">Выйти</string>
    <string name="ACCOUNT_HINT">Перетащите один счёт на другой,\n чтобы перевести деньги</string>
    <string name="TRANSFER_SUMM">Сумма перевода</string>
    <string name="SOURCE_ACCOUNT">СЧЁТ СПИСАНИЯ</string>
    <string name="TARGET_ACCOUNT">СЧЁТ НАЗНАЧЕНИЯ</string>
    <string name="MAKE_TRANSFER">ПЕРЕВЕСТИ</string>
    <string name="ENTER_VALID_SUMM">Введите сумму перевода</string>

</resources>